<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Network-Transceiver</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nothing_data">データが存在しません</string>
    <string name="pass_again">パスワード確認</string>
	<string name="select_channel">チャンネル選択</string>
	<string name="add_channel">チャンネル追加</string>
	<string name="setting_channel">チャンネル設定</string>
	<string name="add_user">ユーザー追加</string>
    <string name="home">ホーム</string>
    <string name="login">ログイン</string>
    <string name="version">バージョン</string>
    <string name="button">ボタン</string>
	<string name="change">変更</string>
	<string name="create">作成</string>
	<string name="username">ユーザー名</string>
	<string name="password">パスワード</string>
	
</resources>
